# minio_uploader

./: Cargo.toml  LICENSE  README.md  Settings.toml  add_context_menu.reg  remove_context_menu.reg
src/: main.rs
