[package]
name = "minio_uploader"
version = "0.1.0"
edition = "2024"
description = "A simple Windows context menu tool to upload files to a Minio server."
license = "MIT"
repository = "https://github.com/your-username/your-repo"

[dependencies]
minio = "0.3.0"
tokio = { version = "1", features = ["full"] }
config = "0.13"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
native-dialog = "0.6"
url = "2.5"